# rust-microservice-skeleton

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rocket.toml  diesel.toml
src/: main.rs
src/base/: configuration.rs  jwt.rs  mod.rs  rocket_factory.rs
src/base/fairings/: jwt_certificates.rs
src/base/macros/: mod.rs
src/commands/: mod.rs  test_command.rs
src/commands/app/: create_account_command.rs  create_application_command.rs  create_user_command.rs  demote_user_command.rs  mod.rs  promote_user_command.rs
src/commands/scaffold/: generate_scaffold.rs  mod.rs
src/commands/scaffold/templates/: _controller.rs  _data_repository.rs  _data_struct.rs  _dto.rs  _middleware.rs  _security.rs
src/commands/test/: mod.rs  test_command.rs
src/controllers/: catchers.rs  mod.rs
src/controllers/api/: account.rs  application.rs  auth.rs  mod.rs  security_test.rs  user.rs
src/controllers/app/: index.rs
src/core/: catcher.rs  configuration.rs  database.rs  dirs.rs  jwt.rs  launcher.rs  mod.rs  password.rs  password_generator.rs  response.rs  rocket_factory.rs  security.rs  validation.rs
src/core/commands/: command.rs  console_command.rs  console_command_registry.rs  console_command_utils.rs  lock.rs  mod.rs  scheduler_builder.rs
src/core/fairings/: cron_scheduler.rs  database_migrations.rs  fixture.rs  jwt_certificates.rs  mod.rs
src/core/guards/: connected_user.rs  mod.rs  pagination.rs
src/core/macros/: command.rs  console_output.rs  crash.rs  error.rs  http.rs  mod.rs
src/domain/: mod.rs  schema.rs
src/domain/dto/: account.rs  application.rs  auth.rs  mod.rs  user.rs
src/domain/model/: account.rs  application.rs  cron_log.rs  mod.rs  refresh_token.rs  user.rs
src/domain/repository/: account_repository.rs  application_repository.rs  cron_log_repository.rs  mod.rs  refresh_token_repository.rs  user_repository.rs
src/domain/repository/traits/: mod.rs  (+1 more)
src/exceptions/dto/: http_exception.rs  http_internal_server_error_exception.rs  http_not_found_exception.rs  mod.rs
src/fixtures/: init_fixture.rs  mod.rs
src/middlewares/: account_middleware.rs  application_middleware.rs  cron_log_middleware.rs  mod.rs  refresh_token_middleware.rs  user_middleware.rs
src/middlewares/traits/: config_enabled_middleware_trait.rs  db_enabled_middleware_trait.rs  mod.rs
src/migrations/2022-12-14-142216_14122022_create_user/: up.sql
src/migrations/2022-12-16-073841_16122022_create_refresh_token/: down.sql  up.sql
src/migrations/2023-01-23-131724_23012023_create_refresh_token/: down.sql  up.sql
src/migrations/2023-01-24-152128_24012023_create_application_and_account/: down.sql  up.sql
src/migrations/2023-01-26-123953_v1.0.0/: down.sql  up.sql
src/security/handlers/: account_security.rs  application_security.rs  mod.rs  test_security.rs  test_security_handler.rs  user_security.rs
src/security/voters/: account_security.rs  application_security.rs  mod.rs  user_security.rs
