[package]
name = "rust-microservice-skeleton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version =  "0.13.3", features = ["toml"]}
colored = "2.0.0"
jwt-simple = "0.11.2"
dotenv = "0.15.0"
failure = "0.1.8"
rocket-validation = "0.1.3"
validator="0.16.0"
diesel= {version = "2.0.2", features = ["postgres", "serde_json", "r2d2", "chrono"]}
r2d2 = "0.8.10"
chrono = {version = "0.4.23", features = ["serde"]}