[package]
name = "rust-microservice-skeleton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version =  "0.13.3", features = ["toml"]}
colored = "2.0.0"
jwt-simple = "0.11.2"
dotenv = "0.15.0"
failure = {version = "0.1.8", features = ["derive"]}
rocket-validation = "0.1.3"
validator="0.16.0"
diesel= {version = "2.0.2", features = ["postgres", "serde_json", "r2d2", "chrono"]}
diesel_migrations = "2.0.0"
r2d2 = "0.8.10"
chrono = {version = "0.4.23", features = ["serde"]}
passwords = "3.1.12"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
tokio-cron-scheduler = {version = "0.9.1", features = ["signal"]}
anyhow = {version = "1.0.68", features = ["backtrace"] }
md5 = "0.7.0"
tokio-test = "0.4.2"
ulid = "1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
